--- a/sass/layout/_order.scss
+++ b/sass/layout/_order.scss
@@ -3,7 +3,17 @@
     background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url('../images/hero.jpg');
+        url('../images/desktop/hero_lg.jpg');
+
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        background-image: linear-gradient(to right,
+                rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)),
+            url('../images/desktop/hero_lg@2x.jpg');
+
+    }
 
     max-width: 1600px;
     margin: 0 auto;
@@ -39,41 +49,70 @@
         padding: 10px 32px;
 
         &:hover,
-        &:focus{
+        &:focus {
             box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2),
-                    0px 1px 1px rgba(0, 0, 0, 0.14),
-                    0px 1px 3px rgba(0, 0, 0, 0.12);
+                0px 1px 1px rgba(0, 0, 0, 0.14),
+                0px 1px 3px rgba(0, 0, 0, 0.12);
         }
     }
 }
 
 @media screen and (max-width: 767px) {
-    .section-order{
+    .section-order {
         background-image: linear-gradient(to right,
                 rgba(47, 48, 58, 0.4),
                 rgba(47, 48, 58, 0.4)),
             url('../images/mobile/hero_sm.jpg');
 
-            padding: 118px 0;
-            &__title{
-                width: 360px;
-                font-size: 26px;
-                line-height: calc(42/26);
+        padding: 118px 0;
+
+        &__title {
+            width: 360px;
+            font-size: 26px;
+            line-height: calc(42/26);
+        }
+    }
+
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        .section-order {
+            background-image: linear-gradient(to right,
+                    rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                url('../images/mobile/hero_sm@2x.jpg');
+
+            max-width: 100vw;
+        }
     }
 }
-    
-}
 
-@media (min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx) {
+@media screen and (max-width: 1199px) and (min-width: 768px){
     .section-order {
         background-image: linear-gradient(to right,
                 rgba(47, 48, 58, 0.4),
                 rgba(47, 48, 58, 0.4)),
-            url('../images/mobile/hero_sm@2x.jpg');
+            url('../images/tablet/hero_md.jpg');
 
-        max-width: 100vw;
+        padding: 118px 0;
 
+        &__title {
+            width: 360px;
+            font-size: 26px;
+            line-height: calc(42/26);
+        }
+    }
+
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        .section-order {
+            background-image: linear-gradient(to right,
+                    rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                url('../images/tablet/hero_md@2x.jpg');
+
+            max-width: 100vw;
+        }
     }
 }
