--- a/sass/layout/_works.scss
+++ b/sass/layout/_works.scss
@@ -58,19 +58,27 @@
     }
 
     &__item {
+        width: 100%;
+        height: auto;
         background-color: var(--primary-white);
         border: 1px solid #eeeeee;
-        width: 370px;
-    
+        
         transition: box-shadow var(--animation);
         display: inline-block;
 
         @media screen and(max-width: 767px){
             display: block;
-            width: 100%;
             &:not(:last-child){
                 margin-bottom: 30px;
             }
+        }
+
+        @media screen and(min-width: 768px) and (max-width: 1199px){
+            flex-basis: calc(50% - 15px);
+        }
+        
+        @media screen and (min-width: 1200px) {
+            width: 370px;
         }
     }
 
