--- a/css/main.css
+++ b/css/main.css
@@ -444,8 +444,8 @@ img {
     -webkit-transform: translateX(100%);
             transform: translateX(100%);
     z-index: 100;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     padding: 48px 40px;
     background-color: var(--primary-white);
     display: -webkit-box;
