--- a/sass/layout/_order.scss
+++ b/sass/layout/_order.scss
@@ -68,6 +68,9 @@
 
         &__title {
             width: 360px;
+            @media screen and (max-width: 360px){
+                width: 100%;
+            }
             font-size: 26px;
             line-height: calc(42/26);
         }
