--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -15,13 +15,15 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 170px;
+
         height: 92px;
+
         color: var(--icons-color);
         border: 1px solid var(--icons-color);
         border-radius: 4px;
                 
-        transition: color var(--animation), border-color var(--animation);
+        transition: color var(--animation), 
+                    border-color var(--animation);
                 
         &:hover,
         &:focus {
@@ -35,6 +37,13 @@
     }
 }
 
+@media screen and(min-width: 1200px){
+    .client{
+        &__link{
+            width: 170px;
+        }
+    }
+}
 
 @media screen and (max-width: 1199px) {
     .section-clients{
@@ -48,9 +57,12 @@
             flex-wrap: wrap;
         }
 
-        &__link{
-            width: 210px;
+        &__item{
+            width: calc(50% - 15px);
+            min-width: 130px;
+        }
 
+        &__link{
             @media screen and(min-width: 768px){
                 width: 226px;
             }
