--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -104,7 +104,7 @@
     justify-content: center;
 
     &__input {
-        min-width: 358px;
+        width: 358px;
 
         padding-top: 15px;
         padding-bottom: 15px;
