--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -57,9 +57,11 @@
             flex-wrap: wrap;
         }
 
-        &__item{
-            width: calc(50% - 15px);
-            min-width: 130px;
+        @media screen and(max-width: 767px){
+            &__item{
+                width: calc(50% - 15px);
+                min-width: 130px;
+            }
         }
 
         &__link{
