--- a/css/main.css
+++ b/css/main.css
@@ -1254,8 +1254,7 @@ img {
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .works__item {
-    -ms-flex-preferred-size: calc(50% - 15px);
-        flex-basis: calc(50% - 15px);
+    width: calc(50% - 15px);
   }
 }
 @media screen and (min-width: 1200px) {
