--- a/sass/base/_mobile-menu.scss
+++ b/sass/base/_mobile-menu.scss
@@ -94,6 +94,9 @@
     }
     .mobile-menu__contacts__item{
         font-size: 34px;
+        @media screen and(max-width: 370px){
+            font-size: 24px;
+        }
         font-weight: 500;
         line-height: calc(39/34);
         letter-spacing: .02rem;
