--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -46,6 +46,14 @@
     }
 }
 
+@media screen and(min-width: 768px) and(max-width: 1199px){
+    .section-team{
+        .teammate{
+            width: calc(50% - 15px);
+        }
+    }
+}
+
 .teammate{
     &__title {
         font-weight: 500;
