--- a/css/main.css
+++ b/css/main.css
@@ -1354,10 +1354,15 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
+  -webkit-transform: translateY(101%);
+          transform: translateY(101%);
   -webkit-transition: -webkit-transform var(--animation);
   transition: -webkit-transform var(--animation);
   transition: transform var(--animation);
   transition: transform var(--animation), -webkit-transform var(--animation);
+}
+@media screen and (max-width: 360px) {
+  .overlay__description {
+    font-size: 14px;
+  }
 }/*# sourceMappingURL=main.css.map */
